# AI-Ideological-and-Political-Education-Teaching-System

./: .env.example  .gitignore  AIPoliticsClassroom.pro  CLAUDE.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  Run-AILoginSystem.command  SECURITY.md  SUPABASE_INTEGRATION.md  main.cpp  mainwindow.cpp  qml.qrc  resources.qrc  sample_questions.json  test_main.cpp
.claude/plan/: teacher-attendance.md
.workflow/: BUG-DIAGNOSIS-REPORT.md
.zread/wiki/: current
AI思政教学系统项目/: AI_Political_Education_Business_Flows.md  AI_Political_Education_System_PRD_CN.md  README.md  产品需求文档.md
NotesApp/: main.cpp  mainwindow.cpp  mainwindow.h  markdownhighlighter.cpp  markdownhighlighter.h  note.cpp  note.h  notesapp.pro
QtProjects/AItechnology/: AIPoliticsClassroom.pro  CMakeLists.txt  Makefile  main.cpp  modernmainwindow.cpp  qml.qrc  resources.qrc  simpleloginwindow.cpp  simpleloginwindow.h  test_learning_analytics.qml
QtProjects/AItechnology/.qtc_clangd/: compile_commands.json
QtProjects/AItechnology/.qtc_clangd/.cache/clangd/index/: Availability.h.91739FB72984AA94.idx  AvailabilityInternal.h.A0FA48EC3C51FEB3.idx  AvailabilityMacros.h.649647AB839BC19A.idx  AvailabilityVersions.h.7E183BD80A761F38.idx  ExportService.cpp.1C70E968E1FB48A2.idx  ExportService.h.1699C43FC3C8D469.idx  OSByteOrder.h.899A98570FBD27A1.idx  QAbstractAxis.A7E826BD2DAA2670.idx  QAbstractBarSeries.E716D319C4653686.idx  QAbstractButton.20C3D3AE1DE23F9D.idx  QAbstractSeries.569741A0B2FF8E53.idx  QAction.68ACC021E6553B36.idx  QApplication.27F04EA61BF4EE42.idx  QApplication.4F700535351C7ABD.idx  QAuthenticator.D51581A9F5856537.idx  QBarLegendMarker.41CA727D41B173D7.idx  QBarSeries.8D521E7FFC249805.idx  QBarSet.46CD035BF9A73584.idx  QBrush.811E3C4440218CAA.idx  QButtonGroup.DC71AC31BBEA3E6B.idx  QByteArray.4AAE46C8D7B39D11.idx  QChart.F444A82D686B93B8.idx  QChartGlobal.48E3B03EDC1ACAFC.idx  QChartView.2ECAE1F4DD60140C.idx  QCheckBox.4E51363A38EFA443.idx  QCheckBox.CA90607306E11791.idx  QCloseEvent.09AE04C95268A10C.idx  QColor.67EB3944D883C160.idx  QComboBox.ABCFC7B969C2AFE8.idx  QCoreApplication.97F948317A612A1C.idx  QCursor.44B83B1FF6C76EBF.idx  QDateTime.10E3C3FD867345CF.idx  QDebug.AD89D0B1798932AD.idx  QDialog.4F3C8FF9BB6EC038.idx  QDialog.D16A6D5830CB32D1.idx  QDir.AD7BFB9FBC14E210.idx  QDrag.4398E25FACF37A26.idx  QDragEnterEvent.6C385C886D098809.idx  QDragMoveEvent.70EDC78AB42CF810.idx  QDropEvent.5B3C517F7A442296.idx  (+965 more)
QtProjects/AItechnology/AI思政教学系统项目/: .gitignore  业务流程图.md  数据库设计文档.md
QtProjects/AItechnology/Pages/main_interface_-_teacher_hub/: code.html
QtProjects/AItechnology/Pages/试题库/ai智能试题库/: code.html
QtProjects/AItechnology/docs/development/: MODERN_UI_UPGRADE.md  PROJECT_STRUCTURE.md
QtProjects/AItechnology/resources/qml/: LearningAnalyticsCard.qml
QtProjects/AItechnology/resources/qml/questionbank/: FilterPanel.qml  QuestionView.qml
QtProjects/AItechnology/resources/styles/: qt_theme_safe.qss  question_bank.qss
QtProjects/AItechnology/src/auth/login/: simpleloginwindow.cpp  simpleloginwindow.h  simpleloginwindow.ui
QtProjects/AItechnology/src/auth/signup/: signupwindow.cpp  signupwindow.h
QtProjects/AItechnology/src/auth/supabase/: supabaseclient.cpp  supabaseclient.h  supabaseconfig.h
QtProjects/AItechnology/src/dashboard/: modernmainwindow.cpp  modernmainwindow.h  modernmainwindow_connection_snippet.cpp
QtProjects/AItechnology/src/examples/: graphics_view_example.cpp  image_button_example.cpp  image_widgets_example.cpp  scroll_area_example.cpp
QtProjects/AItechnology/src/login/: identicalloginwindow.cpp  identicalloginwindow.h  simpleloginwindow.cpp  simpleloginwindow.h
QtProjects/AItechnology/src/main/: main.cpp  main_debug.cpp  test_main.cpp
QtProjects/AItechnology/src/questionbank/: QuestionRepository.cpp  QuestionRepository.h  questionbankwindow.cpp  questionbankwindow.h
QtProjects/AItechnology/src/services/: ExportService.cpp  ExportService.h
QtProjects/AItechnology/src/shared/resources/: stylesheet.qss
QtProjects/AItechnology/src/ui/: aipreparationwidget.cpp  aipreparationwidget.h  mainwindow.cpp  mainwindow.h  moderncheckbox.h  modernmainwindow.cpp  modernmainwindow.h  simpleloginwindow.cpp  simpleloginwindow.h
QtProjects/AItechnology/src/ui/qml/questionbank/: Badge.qml  FilterPanel.qml  QuestionView.qml  Theme.qml
demo10/: ImageDownloader.java
demo11/: Average.java  Copy.java  Max.java  Reverse.java  randomValues.java
demo2/: Film.java  FilmOperator.java  main.java
demo4/: Capture.java  Elephant.java  Main.java  Run.java
demo5/: Chef.java  main.java
demo6/: Main.java  WarmBlood.java
demo7/: Whale.java
demo9/: CoffeeCallback.java  Main.java  MakeCoffee.java
product03/: 三个整数m、n、p（保证m<=n）.cpp  不保证m <=n.cpp  开会时间.cpp  能被4整除.cpp  计算5个数的和.cpp  计算n的乘积.cpp
product03while/: 3的倍数(while写法).cpp  3的倍数.cpp  m加到n.cpp  三项数之和.cpp  买房子.cpp  大于10的个数和总数.cpp  斐波那契数列.cpp  老王卖瓜.cpp  输出比a小的能被b或c整除的数字中最大的数.cpp  首个比1000大的数.cpp
product06循环综合应用/: 1.特别的数字-3.cpp  10：规范日期格式.cpp  11：伪质数.cpp  12：双向箭头.cpp  14：平方和-3.cpp  2535：谁比较好.cpp  4：特别的数字-6.cpp  5：特别的数字-7.cpp  6：点和直线.cpp  7：顺丰快递.cpp  9：奇数的乘积.cpp  crazy_programmer_08.cpp  完全平方数-3.cpp  特别的数字-4.cpp  特别的数字-5.cpp
read/: AI_PREPARATION_REFACTOR_SUMMARY.md
resources/: AppIcon.icns  windows_app_icon.rc
scripts/: package_app.sh  package_windows.ps1  simple_sum.py  windows-installer.iss
统编版/: 第一课 开启初中生活 同步练习- 2024-2025学年统编版道德与法治七年级上册 .docx  第七课 在集体中成长 同步练习-2024-2025学年统编版道德与法治七年级上册.docx  第三单元 珍爱我们的生命 单元测试-2025-2026学年统编版道德与法治七年级上册.docx  第三课 梦想始于当下 同步练习- 2024-2025学年统编版道德与法治七年级上册.docx  第九课 守护生命安全 同步练习-2024-2025学年统编版道德与法治七年级上册.docx  第二课 正确认识自我 同步练习- 2024-2025学年统编版道德与法治七年级上册.docx  第五课 和谐的师生关系 同步练习-2024-2025学年统编版道德与法治七年级上册.docx  第八课 生命可贵 同步练习- 2024-2025学年统编版道德与法治七年级上册.docx  第六课 友谊之树常青 练习题-2024-2025学年统编版道德与法治七年级上册.docx  第十一课 确立人生目标 同步练习-2024-2025学年统编版道德与法治七年级上册.docx  第十三课 实现人生价值 同步练习-2024-2025学年统编版道德与法治七年级上册 .docx  第十二课 端正人生态度 同步练习- 2025-2026学年统编版道德与法治七年级上册.docx  第十课 保持身心健康 同步练习 -2024-2025学年统编版道德与法治七年级上册.docx  第四单元 追求美好人生 单元测试-2025-2026学年统编版道德与法治七年级上册.docx  第四课 幸福和睦的家庭 练习-2025-2026学年统编版道德与法治七年级上册.docx
(+388 files in other folders)
